--- a/index.html
+++ b/index.html
@@ -4,19 +4,18 @@
 <title>Page Title</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="jquery.mobile-1.3.2.min.css" />
-<script src="js/cordova-2.1.0.js"></script>
 <script src="js/phonegap-1.1.0.js"></script>
 <script src="js/jquery-1.9.1.min.js"></script>
 <script src="js/jquery.mobile-1.3.2.min.js"></script>
 <script>
 //add listener when device ready
-    document.addEventListener("deviceready", onDeviceReady, false);
+    //document.addEventListener("deviceready", onDeviceReady, false);
     var db = window.openDatabase("Dummy_DB", "1.0", "Just a Dummy DB", 200000); //will create database Dummy_DB or open it
  
     //function will be called when device ready
-    function onDeviceReady(){
-        db.transaction(populateDB, errorCB, successCB);
-    }
+   // function onDeviceReady(){
+     //   db.transaction(populateDB, errorCB, successCB);
+    //}
  
     //create table and insert some record
     function populateDB(tx) {
@@ -42,14 +41,29 @@
     }
  
     function querySuccess(tx,result){
+		/*
         $('#SoccerPlayerList').empty();
-        $.each(result.rows,function(index){
+        $.each(result.rows.item,function(index){
+			alert(index);
             var row = result.rows.item(index);
             $('#SoccerPlayerList').append('<li><a href="#"><h3 class="ui-li-heading">'+row['Name']+'</h3><p class="ui-li-desc">Club '+row['Club']+'</p></a></li>');
         });
  
         $('#SoccerPlayerList').listview();
+		*/
+		//$.mobile.showPageLoadingMsg(true);
+        var len = result.rows.length;
+		var htmlData = '';
+        $("#SoccerPlayerList").html('');
+        for (var i=0; i<len; i++){
+            var row= result.rows.item(i);
+            htmlData = '<li><a href="#"><h3 class="ui-li-heading">'+row['Name']+'</h3><p class="ui-li-desc">Club '+row['Club']+'</p></a></li>';
+            $("#SoccerPlayerList").append(htmlData);
+        }
+        //$.mobile.changePage($("#index"), { transition : "slide"});
+        //$.mobile.hidePageLoadingMsg();
     }
+	
 </script>
 </head>
 <body>
@@ -65,4 +79,7 @@
 </div>
 <!--end of Soccer Player Page--->
 </body>
+<script>
+   db.transaction(populateDB, errorCB, successCB);
+</script>
 </html>
