--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
     //create table and insert some record
     function populateDB(tx) {
         tx.executeSql('CREATE TABLE IF NOT EXISTS SoccerPlayer (id INTEGER PRIMARY KEY AUTOINCREMENT, Name TEXT NOT NULL, Club TEXT NOT NULL)');
-        tx.executeSql('INSERT INTO SoccerPlayer(Name,Club) VALUES ("Alexandre Pato", "AC Milan")');
-        tx.executeSql('INSERT INTO SoccerPlayer(Name,Club) VALUES ("Van Persie", "Arsenal")');
+		//tx.executeSql('DELETE FROM SoccerPlayer');
     }
  
     //function will be called when an error occurred
@@ -31,7 +30,7 @@
  
     //function will be called when process succeed
     function successCB() {
-        alert("success!");
+        //alert("success!");
         db.transaction(queryDB,errorCB);
     }
  
@@ -41,33 +40,26 @@
     }
  
     function querySuccess(tx,result){
-		/*
-        $('#SoccerPlayerList').empty();
-        $.each(result.rows.item,function(index){
-			alert(index);
-            var row = result.rows.item(index);
-            $('#SoccerPlayerList').append('<li><a href="#"><h3 class="ui-li-heading">'+row['Name']+'</h3><p class="ui-li-desc">Club '+row['Club']+'</p></a></li>');
-        });
- 
-        $('#SoccerPlayerList').listview();
-		*/
 		//$.mobile.showPageLoadingMsg(true);
         var len = result.rows.length;
-		var htmlData = '';
-        $("#SoccerPlayerList").html('');
-        for (var i=0; i<len; i++){
-            var row= result.rows.item(i);
-            htmlData = '<li><a href="#"><h3 class="ui-li-heading">'+row['Name']+'</h3><p class="ui-li-desc">Club '+row['Club']+'</p></a></li>';
-            $("#SoccerPlayerList").append(htmlData);
-        }
-        //$.mobile.changePage($("#index"), { transition : "slide"});
-        //$.mobile.hidePageLoadingMsg();
+		if (len==0) {
+			tx.executeSql('INSERT INTO SoccerPlayer(Name,Club) VALUES ("Alexandre Pato", "AC Milan")');
+			tx.executeSql('INSERT INTO SoccerPlayer(Name,Club) VALUES ("Van Persie", "Arsenal")');
+		} else {
+			var htmlData = '';
+			$("#SoccerPlayerList").html('');
+			for (var i=0; i<len; i++){
+				var row= result.rows.item(i);
+				htmlData = '<li><a href="#"><h3 class="ui-li-heading">'+row['Name']+'</h3><p class="ui-li-desc">Club '+row['Club']+'</p></a></li>';
+				$("#SoccerPlayerList").append(htmlData);
+			}
+		}
     }
 	
 </script>
 </head>
 <body>
- 
+
 <div data-role="page">
   <div data-role="header" data-position="fixed" data-theme="b">
     <h1>Soccer Player</h1>
@@ -75,11 +67,31 @@
   <div data-role="content">
      <ul id="SoccerPlayerList">
     </ul>
+	<div id="my form">
+		<div>Name<input type="text" value="" id="new_name" /></div>
+		<div>Club<input type="text" value="" id="new_club" /></div>
+	</div>
+	<input type="button" id="add" value="ADD" /> 
+	<input type="button" id="delete_all" value="DELETE ALL" /> 
   </div>
 </div>
+
 <!--end of Soccer Player Page--->
 </body>
 <script>
-   db.transaction(populateDB, errorCB, successCB);
+	db.transaction(populateDB, errorCB, successCB);
+    function addrecord(tx) {
+		tx.executeSql('INSERT INTO SoccerPlayer(Name,Club) VALUES ("'+$('#new_name').val()+'", "'+$('#new_club').val()+'")');
+    }
+    function delallrecords(tx) {
+		tx.executeSql('DELETE FROM SoccerPlayer');
+		$("#SoccerPlayerList").html('');
+    }
+	$('#add').click(function(){
+		db.transaction(addrecord, errorCB, successCB);
+	});
+	$('#delete_all').click(function(){
+		db.transaction(delallrecords, errorCB, successCB);
+	});
 </script>
 </html>
