--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Page Title</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="jquery.mobile-1.3.2.min.css" />
-<script src="js/phonegap-1.1.0.js"></script>
+<script src="js/phonegap-1.2.0.js"></script>
 <script src="js/jquery-1.9.1.min.js"></script>
 <script src="js/jquery.mobile-1.3.2.min.js"></script>
 
@@ -147,6 +147,7 @@
     // A button will call this function
     function capturePhoto() {
       // Take picture using device camera and retrieve image as base64-encoded string
+	  alert('photo');
       navigator.camera.getPicture(onPhotoDataSuccess, onFail, { quality: 50 });
     }
 
@@ -158,6 +159,7 @@
 
     // A button will call this function
     function getPhoto(source) {
+		alert('get photo');
       // Retrieve image file location from specified source
       navigator.camera.getPicture(onPhotoURISuccess, onFail, { quality: 50, 
         destinationType: destinationType.FILE_URI,
