--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <script src="js/phonegap-1.2.0.js"></script>
 <script src="js/jquery-1.9.1.min.js"></script>
 <script src="js/jquery.mobile-1.3.2.min.js"></script>
-
+<script type="text/javascript" charset="utf-8" src="js/cordova.js"></script>
 </head>
 <body>
 
@@ -26,18 +26,14 @@
 	<input type="button" id="add" value="ADD" /> 
 	<input type="button" id="delete_all" value="DELETE ALL" /> 
 	
-    <button onclick="capturePhoto();">Capture Photo</button> <br>
-    <button onclick="capturePhotoEdit();">Capture Editable Photo</button> <br>
-    <button onclick="getPhoto(pictureSource.PHOTOLIBRARY);">From Photo Library</button><br>
-    <button onclick="getPhoto(pictureSource.SAVEDPHOTOALBUM);">From Photo Album</button><br>
-    <img style="display:none;width:60px;height:60px;" id="smallImage" src="" />
-    <img style="display:none;" id="largeImage" src="" /> 
+	<button onclick="getPhoto(pictureSource.PHOTOLIBRARY);">From Gallery!!</button>
+	<img id="largeImage" width="100" src="" />
   </div>
 </div>
 
 <!--end of Soccer Player Page--->
 </body>
-<script>
+<script type="text/javascript" charset="utf-8">
 	//add listener when device ready
     //document.addEventListener("deviceready", onDeviceReady, false);
     var db = window.openDatabase("Dummy_DB", "1.0", "Just a Dummy DB", 200000); //will create database Dummy_DB or open it
@@ -97,81 +93,6 @@
     }
 	//-----------------------------------------
 	
-	
-	
-	//Camera ---------------------------------------------
-	var pictureSource;   // picture source
-    var destinationType; // sets the format of returned value 
-
-    // Wait for PhoneGap to connect with the device
-    //document.addEventListener("deviceready",onDeviceReady,false);
-
-    // PhoneGap is ready to be used!
-	//function onDeviceReady() {
-        pictureSource=navigator.camera.PictureSourceType;
-        destinationType=navigator.camera.DestinationType;
-    //}
-
-    // Called when a photo is successfully retrieved
-    function onPhotoDataSuccess(imageData) {
-      // Uncomment to view the base64 encoded image data
-      // console.log(imageData);
-
-      // Get image handle
-      var smallImage = document.getElementById('smallImage');
-
-      // Unhide image elements
-      smallImage.style.display = 'block';
-
-      // Show the captured photo
-      // The inline CSS rules are used to resize the image
-      smallImage.src = "data:image/jpeg;base64," + imageData;
-    }
-
-    // Called when a photo is successfully retrieved
-    function onPhotoURISuccess(imageURI) {
-      // Uncomment to view the image file URI 
-      // console.log(imageURI);
-
-      // Get image handle
-      var largeImage = document.getElementById('largeImage');
-
-      // Unhide image elements
-      largeImage.style.display = 'block';
-
-      // Show the captured photo
-      // The inline CSS rules are used to resize the image
-      largeImage.src = imageURI;
-    }
-
-    // A button will call this function
-    function capturePhoto() {
-      // Take picture using device camera and retrieve image as base64-encoded string
-	  alert('photo');
-      navigator.camera.getPicture(onPhotoDataSuccess, onFail, { quality: 50 });
-    }
-
-    // A button will call this function
-    function capturePhotoEdit() {
-      // Take picture using device camera, allow edit, and retrieve image as base64-encoded string  
-      navigator.camera.getPicture(onPhotoDataSuccess, onFail, { quality: 20, allowEdit: true }); 
-    }
-
-    // A button will call this function
-    function getPhoto(source) {
-		alert('get photo');
-      // Retrieve image file location from specified source
-      navigator.camera.getPicture(onPhotoURISuccess, onFail, { quality: 50, 
-        destinationType: destinationType.FILE_URI,
-        sourceType: source });
-    }
-
-    // Called if something bad happens.
-    function onFail(message) {
-      alert('Failed because: ' + message);
-    }
-	//----------------------------------------------------
-	
 	//DOM actions ----------------------------------------
 	$('#add').click(function(){
 		db.transaction(addrecord, errorCB,querySuccess);
@@ -182,4 +103,96 @@
 	//-----------------------------------------------------
 
 </script>
+<script type="text/javascript" charset="utf-8">
+
+var pictureSource;   
+var destinationType; 
+
+document.addEventListener("deviceready",onDeviceReady,false);
+
+function onDeviceReady() 
+{
+    pictureSource=navigator.camera.PictureSourceType;
+    destinationType=navigator.camera.DestinationType;
+}
+
+
+function onPhotoURISuccess(imageURI) 
+{
+    console.log(imageURI);
+    var largeImage = document.getElementById('largeImage');
+    largeImage.style.display = 'block';
+    largeImage.src = imageURI;
+}
+
+function onPhotoDataSuccess(imageURI) 
+{ 
+    var imgProfile = document.getElementById('imgProfile');
+    imgProfile.src = imageURI;
+    if(sessionStorage.isprofileimage==1)
+    {
+        getLocation();
+    }
+    movePic(imageURI);
+}
+
+function onFail(message) 
+{
+    alert('Failed because: ' + message);
+}
+
+function movePic(file)
+{ 
+    window.resolveLocalFileSystemURI(file, resolveOnSuccess, resOnError); 
+} 
+
+function resolveOnSuccess(entry)
+{ 
+    var d = new Date();
+    var n = d.getTime();
+    var newFileName = n + ".jpg";
+    var myFolderApp = "MyAppFolder";
+    window.requestFileSystem(LocalFileSystem.PERSISTENT, 0, function(fileSys) 
+    {      
+        fileSys.root.getDirectory( myFolderApp,
+                {create:true, exclusive: false},
+                function(directory) 
+                {
+                    entry.moveTo(directory, newFileName,  successMove, resOnError);
+                },
+        resOnError);
+    },
+    resOnError);
+}
+
+function successMove(entry) 
+{
+    sessionStorage.setItem('imagepath', entry.fullPath);
+}
+
+function resOnError(error) 
+{
+    alert(error.code);
+}
+
+function capturePhotoEdit() 
+{
+    navigator.camera.getPicture(onPhotoDataSuccess, onFail, { quality: 20, allowEdit: true,
+    destinationType: destinationType.DATA_URL });
+}
+
+function getPhoto(source) 
+{
+    navigator.camera.getPicture(onPhotoURISuccess, onFail, { quality: 50, 
+    destinationType: destinationType.FILE_URI,
+    sourceType: source });
+}
+
+function onFail(message) 
+{
+    alert('Failed because: ' + message);
+}
+
+</script>
+
 </html>
